--- a/data/qids/Q6759645/manifest.json
+++ b/data/qids/Q6759645/manifest.json
@@ -22,20 +22,20 @@
     },
     "items": [
         {
-            "id": "https:\/\/damsssl.llgc.org.uk\/iiif\/2.0\/4627582\/manifest.json",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/Journal\/manifest.json",
             "type": "Manifest",
             "label": {
                 "en": [
-                    "Example"
+                    "Journal articles"
                 ]
             }
         },
         {
-            "id": "https:\/\/damsssl.llgc.org.uk\/iiif\/2.0\/4627582\/manifest.json",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/Newspaper\/manifest.json",
             "type": "Manifest",
             "label": {
                 "en": [
-                    "Example"
+                    "Newspaper articles"
                 ]
             }
         }
