--- a/data/qids/Q16845399/newspaper/manifest.json
+++ b/data/qids/Q16845399/newspaper/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http:\/\/iiif.io\/api\/presentation\/3\/context.json",
-    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q16845399\/Newspaper\/manifest.json",
+    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q16845399\/newspaper\/manifest.json",
     "type": "Collection",
     "label": {
         "en": "Newspaper"
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q16845399\/Newspaper\/4519513-modsarticle4-4519515-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q16845399\/newspaper\/4519513-modsarticle4-4519515-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q16845399\/Newspaper\/4518353-modsarticle46-4518358-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q16845399\/newspaper\/4518353-modsarticle46-4518358-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
