--- a/data/qids/Q18200042/journal/manifest.json
+++ b/data/qids/Q18200042/journal/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http:\/\/iiif.io\/api\/presentation\/3\/context.json",
-    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q18200042\/Journal\/manifest.json",
+    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q18200042\/journal\/manifest.json",
     "type": "Collection",
     "label": {
         "en": "Journal"
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q18200042\/Journal\/llgc-id2092910_llgc-id2098453.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q18200042\/journal\/llgc-id2092910_llgc-id2098453.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q18200042\/Journal\/llgc-id4718179_llgc-id4728984.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q18200042\/journal\/llgc-id4718179_llgc-id4728984.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
