--- a/data/qids/Q1886336/newspaper/manifest.json
+++ b/data/qids/Q1886336/newspaper/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http:\/\/iiif.io\/api\/presentation\/3\/context.json",
-    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/Newspaper\/manifest.json",
+    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/newspaper\/manifest.json",
     "type": "Collection",
     "label": {
         "en": "Newspaper"
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/Newspaper\/4313306-modsarticle162-4313313-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/newspaper\/4313306-modsarticle162-4313313-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/Newspaper\/3794412-modsarticle68-3794419-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/newspaper\/3794412-modsarticle68-3794419-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
