--- a/data/qids/Q20631844/newspaper/manifest.json
+++ b/data/qids/Q20631844/newspaper/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http:\/\/iiif.io\/api\/presentation\/3\/context.json",
-    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20631844\/Newspaper\/manifest.json",
+    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20631844\/newspaper\/manifest.json",
     "type": "Collection",
     "label": {
         "en": "Newspaper"
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20631844\/Newspaper\/4355701-modsarticle7-4355708-3.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20631844\/newspaper\/4355701-modsarticle7-4355708-3.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20631844\/Newspaper\/3332783-modsarticle22-3332788-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20631844\/newspaper\/3332783-modsarticle22-3332788-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
