--- a/data/qids/Q21459585/newspaper/manifest.json
+++ b/data/qids/Q21459585/newspaper/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http:\/\/iiif.io\/api\/presentation\/3\/context.json",
-    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21459585\/Newspaper\/manifest.json",
+    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21459585\/newspaper\/manifest.json",
     "type": "Collection",
     "label": {
         "en": "Newspaper"
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21459585\/Newspaper\/3807128-modsarticle74-3807134-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21459585\/newspaper\/3807128-modsarticle74-3807134-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21459585\/Newspaper\/3468841-modsarticle47-3468844-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21459585\/newspaper\/3468841-modsarticle47-3468844-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
