--- a/data/qids/Q21462817/newspaper/manifest.json
+++ b/data/qids/Q21462817/newspaper/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http:\/\/iiif.io\/api\/presentation\/3\/context.json",
-    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21462817\/Newspaper\/manifest.json",
+    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21462817\/newspaper\/manifest.json",
     "type": "Collection",
     "label": {
         "en": "Newspaper"
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21462817\/Newspaper\/3431186-modsarticle8-3431187-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21462817\/newspaper\/3431186-modsarticle8-3431187-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21462817\/Newspaper\/3414467-modsarticle100-3414475-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21462817\/newspaper\/3414467-modsarticle100-3414475-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
