--- a/data/qids/Q4722948/newspaper/manifest.json
+++ b/data/qids/Q4722948/newspaper/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http:\/\/iiif.io\/api\/presentation\/3\/context.json",
-    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q4722948\/Newspaper\/manifest.json",
+    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q4722948\/newspaper\/manifest.json",
     "type": "Collection",
     "label": {
         "en": "Newspaper"
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q4722948\/Newspaper\/4171866-modsarticle75-4171869-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q4722948\/newspaper\/4171866-modsarticle75-4171869-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
