--- a/data/qids/Q5113432/newspaper/manifest.json
+++ b/data/qids/Q5113432/newspaper/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http:\/\/iiif.io\/api\/presentation\/3\/context.json",
-    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5113432\/Newspaper\/manifest.json",
+    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5113432\/newspaper\/manifest.json",
     "type": "Collection",
     "label": {
         "en": "Newspaper"
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5113432\/Newspaper\/3513428-modsarticle5-3513429-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5113432\/newspaper\/3513428-modsarticle5-3513429-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5113432\/Newspaper\/3982383-modsarticle4-3982384-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5113432\/newspaper\/3982383-modsarticle4-3982384-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
