--- a/data/qids/Q6759645/manifest.json
+++ b/data/qids/Q6759645/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http:\/\/iiif.io\/api\/presentation\/3\/context.json",
-    "id": "https:\/\/404mike.github.io\/IIIF-Content-State\/collection-v3.json",
+    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/manifest.json",
     "type": "Collection",
     "label": {
         "en": "Collections for Margaret Lindsay Williams"
