--- a/data/qids/Q6759645/newspaper/manifest.json
+++ b/data/qids/Q6759645/newspaper/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http:\/\/iiif.io\/api\/presentation\/3\/context.json",
-    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/Newspaper\/manifest.json",
+    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/newspaper\/manifest.json",
     "type": "Collection",
     "label": {
         "en": "Newspaper"
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/Newspaper\/3661980-modsarticle10-3661983-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/newspaper\/3661980-modsarticle10-3661983-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/Newspaper\/3661980-modsarticle13-3661983-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/newspaper\/3661980-modsarticle13-3661983-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
