--- a/data/qids/Q7787897/journal/manifest.json
+++ b/data/qids/Q7787897/journal/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http:\/\/iiif.io\/api\/presentation\/3\/context.json",
-    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7787897\/Journal\/manifest.json",
+    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7787897\/journal\/manifest.json",
     "type": "Collection",
     "label": {
         "en": "Journal"
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7787897\/Journal\/llgc-id1191402_llgc-id1191529.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7787897\/journal\/llgc-id1191402_llgc-id1191529.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7787897\/Journal\/llgc-id1311205_llgc-id1313893.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7787897\/journal\/llgc-id1311205_llgc-id1313893.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
