--- a/data/qids/Q8003042/newspaper/manifest.json
+++ b/data/qids/Q8003042/newspaper/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http:\/\/iiif.io\/api\/presentation\/3\/context.json",
-    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q8003042\/Newspaper\/manifest.json",
+    "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q8003042\/newspaper\/manifest.json",
     "type": "Collection",
     "label": {
         "en": "Newspaper"
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q8003042\/Newspaper\/3832940-modsarticle87-3832957-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q8003042\/newspaper\/3832940-modsarticle87-3832957-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q8003042\/Newspaper\/4244115-modsarticle123-4244123-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q8003042\/newspaper\/4244115-modsarticle123-4244123-1.json\/",
             "type": "Manifest",
             "label": {
                 "en": [
