--- a/data/qids/Q5539465/newspaper/manifest.json
+++ b/data/qids/Q5539465/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5539465\/newspaper\/3309701-modsarticle107-3309708-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5539465\/newspaper\/3309701-modsarticle107-3309708-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5539465\/newspaper\/3815834-modsarticle116-3815845-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5539465\/newspaper\/3815834-modsarticle116-3815845-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
