--- a/data/qids/Q6099370/journal/manifest.json
+++ b/data/qids/Q6099370/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6099370\/journal\/llgc-id2555083_llgc-id2583378.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6099370\/journal\/llgc-id2555083_llgc-id2583378.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6099370\/journal\/llgc-id1380216_llgc-id1385424.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6099370\/journal\/llgc-id1380216_llgc-id1385424.json",
             "type": "Manifest",
             "label": {
                 "en": [
