--- a/data/qids/Q6450928/newspaper/manifest.json
+++ b/data/qids/Q6450928/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6450928\/newspaper\/4455377-modsarticle33-4455383-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6450928\/newspaper\/4455377-modsarticle33-4455383-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6450928\/newspaper\/4242565-modsarticle110-4242573-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6450928\/newspaper\/4242565-modsarticle110-4242573-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
