--- a/data/qids/Q7787897/newspaper/manifest.json
+++ b/data/qids/Q7787897/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7787897\/newspaper\/3052863-modsarticle12-3052865-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7787897\/newspaper\/3052863-modsarticle12-3052865-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7787897\/newspaper\/3100706-modsarticle13-3100708-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7787897\/newspaper\/3100706-modsarticle13-3100708-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
