--- a/data/qids/Q11208643/journal/manifest.json
+++ b/data/qids/Q11208643/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q11208643\/journal\/llgc-id1238716_llgc-id1240100.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q11208643\/journal\/llgc-id1238716_llgc-id1240100.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q11208643\/journal\/llgc-id2092910_llgc-id2095890.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q11208643\/journal\/llgc-id2092910_llgc-id2095890.json",
             "type": "Manifest",
             "label": {
                 "en": [
