--- a/data/qids/Q11208643/newspaper/manifest.json
+++ b/data/qids/Q11208643/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q11208643\/newspaper\/3390833-modsarticle1-3390834-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q11208643\/newspaper\/3390833-modsarticle1-3390834-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q11208643\/newspaper\/3721548-modsarticle114-3721555-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q11208643\/newspaper\/3721548-modsarticle114-3721555-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
