--- a/data/qids/Q16106615/journal/manifest.json
+++ b/data/qids/Q16106615/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q16106615\/journal\/llgc-id1380216_llgc-id1385913.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q16106615\/journal\/llgc-id1380216_llgc-id1385913.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q16106615\/journal\/llgc-id1380216_llgc-id1385277.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q16106615\/journal\/llgc-id1380216_llgc-id1385277.json",
             "type": "Manifest",
             "label": {
                 "en": [
