--- a/data/qids/Q16845399/newspaper/manifest.json
+++ b/data/qids/Q16845399/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q16845399\/newspaper\/4519513-modsarticle4-4519515-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q16845399\/newspaper\/4519513-modsarticle4-4519515-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q16845399\/newspaper\/4518353-modsarticle46-4518358-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q16845399\/newspaper\/4518353-modsarticle46-4518358-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
