--- a/data/qids/Q1886336/journal/manifest.json
+++ b/data/qids/Q1886336/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/journal\/llgc-id2045456_llgc-id2046480.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/journal\/llgc-id2045456_llgc-id2046480.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/journal\/llgc-id1277425_llgc-id1279252.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/journal\/llgc-id1277425_llgc-id1279252.json",
             "type": "Manifest",
             "label": {
                 "en": [
