--- a/data/qids/Q1886336/newspaper/manifest.json
+++ b/data/qids/Q1886336/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/newspaper\/4313306-modsarticle162-4313313-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/newspaper\/4313306-modsarticle162-4313313-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/newspaper\/3794412-modsarticle68-3794419-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/newspaper\/3794412-modsarticle68-3794419-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
