--- a/data/qids/Q20054436/newspaper/manifest.json
+++ b/data/qids/Q20054436/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20054436\/newspaper\/3580715-modsarticle53-3580720-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20054436\/newspaper\/3580715-modsarticle53-3580720-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
