--- a/data/qids/Q20631844/journal/manifest.json
+++ b/data/qids/Q20631844/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20631844\/journal\/llgc-id2919943_llgc-id2994356.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20631844\/journal\/llgc-id2919943_llgc-id2994356.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20631844\/journal\/llgc-id1272866_llgc-id1276229.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20631844\/journal\/llgc-id1272866_llgc-id1276229.json",
             "type": "Manifest",
             "label": {
                 "en": [
