--- a/data/qids/Q20748839/newspaper/manifest.json
+++ b/data/qids/Q20748839/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20748839\/newspaper\/3612081-modsarticle10-3612083-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20748839\/newspaper\/3612081-modsarticle10-3612083-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
