--- a/data/qids/Q21455263/newspaper/manifest.json
+++ b/data/qids/Q21455263/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21455263\/newspaper\/3836418-modsarticle51-3836422-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21455263\/newspaper\/3836418-modsarticle51-3836422-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
