--- a/data/qids/Q21456839/journal/manifest.json
+++ b/data/qids/Q21456839/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21456839\/journal\/llgc-id1337678_llgc-id1340020.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21456839\/journal\/llgc-id1337678_llgc-id1340020.json",
             "type": "Manifest",
             "label": {
                 "en": [
