--- a/data/qids/Q21456839/newspaper/manifest.json
+++ b/data/qids/Q21456839/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21456839\/newspaper\/3429242-modsarticle65-3429246-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21456839\/newspaper\/3429242-modsarticle65-3429246-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
