--- a/data/qids/Q21459585/journal/manifest.json
+++ b/data/qids/Q21459585/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21459585\/journal\/llgc-id1191402_llgc-id1196881.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21459585\/journal\/llgc-id1191402_llgc-id1196881.json",
             "type": "Manifest",
             "label": {
                 "en": [
