--- a/data/qids/Q21462817/journal/manifest.json
+++ b/data/qids/Q21462817/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21462817\/journal\/llgc-id4718179_llgc-id4728335.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21462817\/journal\/llgc-id4718179_llgc-id4728335.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21462817\/journal\/llgc-id1386666_llgc-id1426329.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21462817\/journal\/llgc-id1386666_llgc-id1426329.json",
             "type": "Manifest",
             "label": {
                 "en": [
