--- a/data/qids/Q21467261/journal/manifest.json
+++ b/data/qids/Q21467261/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21467261\/journal\/llgc-id2919943_llgc-id2992946.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21467261\/journal\/llgc-id2919943_llgc-id2992946.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21467261\/journal\/llgc-id1326508_llgc-id1327777.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21467261\/journal\/llgc-id1326508_llgc-id1327777.json",
             "type": "Manifest",
             "label": {
                 "en": [
