--- a/data/qids/Q21467261/newspaper/manifest.json
+++ b/data/qids/Q21467261/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21467261\/newspaper\/3506231-modsarticle70-3506234-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21467261\/newspaper\/3506231-modsarticle70-3506234-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21467261\/newspaper\/3810594-modsarticle45-3810601-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21467261\/newspaper\/3810594-modsarticle45-3810601-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
