--- a/data/qids/Q2903257/newspaper/manifest.json
+++ b/data/qids/Q2903257/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q2903257\/newspaper\/3098722-modsarticle48-3098728-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q2903257\/newspaper\/3098722-modsarticle48-3098728-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q2903257\/newspaper\/3579419-modsarticle95-3579427-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q2903257\/newspaper\/3579419-modsarticle95-3579427-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
