--- a/data/qids/Q449054/journal/manifest.json
+++ b/data/qids/Q449054/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q449054\/journal\/llgc-id1214989_llgc-id1217551.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q449054\/journal\/llgc-id1214989_llgc-id1217551.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q449054\/journal\/llgc-id1214989_llgc-id1218158.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q449054\/journal\/llgc-id1214989_llgc-id1218158.json",
             "type": "Manifest",
             "label": {
                 "en": [
