--- a/data/qids/Q4722948/journal/manifest.json
+++ b/data/qids/Q4722948/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q4722948\/journal\/llgc-id1272866_llgc-id1276399.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q4722948\/journal\/llgc-id1272866_llgc-id1276399.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q4722948\/journal\/llgc-id1272866_llgc-id1276399.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q4722948\/journal\/llgc-id1272866_llgc-id1276399.json",
             "type": "Manifest",
             "label": {
                 "en": [
