--- a/data/qids/Q4722948/newspaper/manifest.json
+++ b/data/qids/Q4722948/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q4722948\/newspaper\/4171866-modsarticle75-4171869-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q4722948\/newspaper\/4171866-modsarticle75-4171869-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
