--- a/data/qids/Q5039201/journal/manifest.json
+++ b/data/qids/Q5039201/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5039201\/journal\/llgc-id1386666_llgc-id1400440.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5039201\/journal\/llgc-id1386666_llgc-id1400440.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5039201\/journal\/llgc-id1386666_llgc-id1400440.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5039201\/journal\/llgc-id1386666_llgc-id1400440.json",
             "type": "Manifest",
             "label": {
                 "en": [
