--- a/data/qids/Q5039201/newspaper/manifest.json
+++ b/data/qids/Q5039201/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5039201\/newspaper\/3585775-modsarticle28-3585778-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5039201\/newspaper\/3585775-modsarticle28-3585778-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5039201\/newspaper\/3585775-modsarticle28-3585778-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5039201\/newspaper\/3585775-modsarticle28-3585778-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
