--- a/data/qids/Q5113432/journal/manifest.json
+++ b/data/qids/Q5113432/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5113432\/journal\/llgc-id1326508_llgc-id1326905.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5113432\/journal\/llgc-id1326508_llgc-id1326905.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5113432\/journal\/llgc-id1326508_llgc-id1327555.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5113432\/journal\/llgc-id1326508_llgc-id1327555.json",
             "type": "Manifest",
             "label": {
                 "en": [
