--- a/data/qids/Q5113432/newspaper/manifest.json
+++ b/data/qids/Q5113432/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5113432\/newspaper\/3513428-modsarticle5-3513429-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5113432\/newspaper\/3513428-modsarticle5-3513429-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5113432\/newspaper\/3982383-modsarticle4-3982384-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5113432\/newspaper\/3982383-modsarticle4-3982384-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
