--- a/data/qids/Q5539465/journal/manifest.json
+++ b/data/qids/Q5539465/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5539465\/journal\/llgc-id2092910_llgc-id2094382.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5539465\/journal\/llgc-id2092910_llgc-id2094382.json",
             "type": "Manifest",
             "label": {
                 "en": [
