--- a/data/qids/Q562540/journal/manifest.json
+++ b/data/qids/Q562540/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q562540\/journal\/llgc-id1311205_llgc-id1312250.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q562540\/journal\/llgc-id1311205_llgc-id1312250.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q562540\/journal\/llgc-id1277425_llgc-id1283175.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q562540\/journal\/llgc-id1277425_llgc-id1283175.json",
             "type": "Manifest",
             "label": {
                 "en": [
