--- a/data/qids/Q562540/newspaper/manifest.json
+++ b/data/qids/Q562540/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q562540\/newspaper\/3607866-modsarticle67-3607872-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q562540\/newspaper\/3607866-modsarticle67-3607872-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q562540\/newspaper\/4096712-modsarticle77-4096716-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q562540\/newspaper\/4096712-modsarticle77-4096716-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
