--- a/data/qids/Q6759645/newspaper/manifest.json
+++ b/data/qids/Q6759645/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/newspaper\/3661980-modsarticle10-3661983-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/newspaper\/3661980-modsarticle10-3661983-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/newspaper\/3661980-modsarticle13-3661983-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/newspaper\/3661980-modsarticle13-3661983-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
