--- a/data/qids/Q6777644/newspaper/manifest.json
+++ b/data/qids/Q6777644/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6777644\/newspaper\/3719316-modsarticle73-3719321-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6777644\/newspaper\/3719316-modsarticle73-3719321-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
