--- a/data/qids/Q7025356/journal/manifest.json
+++ b/data/qids/Q7025356/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7025356\/journal\/llgc-id1326508_llgc-id1328421.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7025356\/journal\/llgc-id1326508_llgc-id1328421.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7025356\/journal\/llgc-id1175725_llgc-id1175979.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7025356\/journal\/llgc-id1175725_llgc-id1175979.json",
             "type": "Manifest",
             "label": {
                 "en": [
