--- a/data/qids/Q7025356/newspaper/manifest.json
+++ b/data/qids/Q7025356/newspaper/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7025356\/newspaper\/3884012-modsarticle75-3884016-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7025356\/newspaper\/3884012-modsarticle75-3884016-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
@@ -31,7 +31,7 @@
             }
         },
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7025356\/newspaper\/4314512-modsarticle72-4314516-1.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7025356\/newspaper\/4314512-modsarticle72-4314516-1.json",
             "type": "Manifest",
             "label": {
                 "en": [
