--- a/data/qids/Q7199739/journal/manifest.json
+++ b/data/qids/Q7199739/journal/manifest.json
@@ -22,7 +22,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7199739\/journal\/llgc-id1337678_llgc-id1339634.json\/",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7199739\/journal\/llgc-id1337678_llgc-id1339634.json",
             "type": "Manifest",
             "label": {
                 "en": [
