--- a/data/qids/Q6777644/manifest.json
+++ b/data/qids/Q6777644/manifest.json
@@ -3,10 +3,14 @@
     "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6777644\/manifest.json",
     "type": "Collection",
     "label": {
-        "en": "Collections for Martyn Jones"
+        "en": [
+            "Collections for Martyn Jones"
+        ]
     },
     "summary": {
-        "en": "Collection Summary for Martyn Jones"
+        "en": [
+            "Collection Summary for Martyn Jones"
+        ]
     },
     "requiredStatement": {
         "label": {
