--- a/data/qids/Q18200042/manifest.json
+++ b/data/qids/Q18200042/manifest.json
@@ -3,10 +3,14 @@
     "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q18200042\/manifest.json",
     "type": "Collection",
     "label": {
-        "en": "Collections for Edward Pugh"
+        "en": [
+            "Collections for Edward Pugh"
+        ]
     },
     "summary": {
-        "en": "Collection Summary for Edward Pugh"
+        "en": [
+            "Collection Summary for Edward Pugh"
+        ]
     },
     "requiredStatement": {
         "label": {
