--- a/data/qids/Q20631844/manifest.json
+++ b/data/qids/Q20631844/manifest.json
@@ -3,10 +3,14 @@
     "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20631844\/manifest.json",
     "type": "Collection",
     "label": {
-        "en": "Collections for R. K. Penson"
+        "en": [
+            "Collections for R. K. Penson"
+        ]
     },
     "summary": {
-        "en": "Collection Summary for R. K. Penson"
+        "en": [
+            "Collection Summary for R. K. Penson"
+        ]
     },
     "requiredStatement": {
         "label": {
