--- a/data/qids/Q20748839/manifest.json
+++ b/data/qids/Q20748839/manifest.json
@@ -3,10 +3,14 @@
     "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20748839\/manifest.json",
     "type": "Collection",
     "label": {
-        "en": "Collections for Isaac John Williams"
+        "en": [
+            "Collections for Isaac John Williams"
+        ]
     },
     "summary": {
-        "en": "Collection Summary for Isaac John Williams"
+        "en": [
+            "Collection Summary for Isaac John Williams"
+        ]
     },
     "requiredStatement": {
         "label": {
