--- a/data/qids/Q21456839/manifest.json
+++ b/data/qids/Q21456839/manifest.json
@@ -3,10 +3,14 @@
     "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21456839\/manifest.json",
     "type": "Collection",
     "label": {
-        "en": "Collections for James Flewitt Mullock"
+        "en": [
+            "Collections for James Flewitt Mullock"
+        ]
     },
     "summary": {
-        "en": "Collection Summary for James Flewitt Mullock"
+        "en": [
+            "Collection Summary for James Flewitt Mullock"
+        ]
     },
     "requiredStatement": {
         "label": {
