--- a/data/qids/Q21457000/manifest.json
+++ b/data/qids/Q21457000/manifest.json
@@ -3,10 +3,14 @@
     "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21457000\/manifest.json",
     "type": "Collection",
     "label": {
-        "en": "Collections for Elinor Evans"
+        "en": [
+            "Collections for Elinor Evans"
+        ]
     },
     "summary": {
-        "en": "Collection Summary for Elinor Evans"
+        "en": [
+            "Collection Summary for Elinor Evans"
+        ]
     },
     "requiredStatement": {
         "label": {
