--- a/data/qids/Q2903257/manifest.json
+++ b/data/qids/Q2903257/manifest.json
@@ -3,10 +3,14 @@
     "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q2903257\/manifest.json",
     "type": "Collection",
     "label": {
-        "en": "Collections for Bill James"
+        "en": [
+            "Collections for Bill James"
+        ]
     },
     "summary": {
-        "en": "Collection Summary for Bill James"
+        "en": [
+            "Collection Summary for Bill James"
+        ]
     },
     "requiredStatement": {
         "label": {
