--- a/data/qids/Q5039201/manifest.json
+++ b/data/qids/Q5039201/manifest.json
@@ -3,10 +3,14 @@
     "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5039201\/manifest.json",
     "type": "Collection",
     "label": {
-        "en": "Collections for Carey Morris"
+        "en": [
+            "Collections for Carey Morris"
+        ]
     },
     "summary": {
-        "en": "Collection Summary for Carey Morris"
+        "en": [
+            "Collection Summary for Carey Morris"
+        ]
     },
     "requiredStatement": {
         "label": {
