--- a/data/qids/Q6759645/manifest.json
+++ b/data/qids/Q6759645/manifest.json
@@ -3,10 +3,14 @@
     "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/manifest.json",
     "type": "Collection",
     "label": {
-        "en": "Collections for Margaret Lindsay Williams"
+        "en": [
+            "Collections for Margaret Lindsay Williams"
+        ]
     },
     "summary": {
-        "en": "Collection Summary for Margaret Lindsay Williams"
+        "en": [
+            "Collection Summary for Margaret Lindsay Williams"
+        ]
     },
     "requiredStatement": {
         "label": {
