--- a/data/qids/Q7025356/manifest.json
+++ b/data/qids/Q7025356/manifest.json
@@ -3,10 +3,14 @@
     "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7025356\/manifest.json",
     "type": "Collection",
     "label": {
-        "en": "Collections for Nicholas Evans"
+        "en": [
+            "Collections for Nicholas Evans"
+        ]
     },
     "summary": {
-        "en": "Collection Summary for Nicholas Evans"
+        "en": [
+            "Collection Summary for Nicholas Evans"
+        ]
     },
     "requiredStatement": {
         "label": {
