--- a/data/qids/Q7199739/manifest.json
+++ b/data/qids/Q7199739/manifest.json
@@ -3,10 +3,14 @@
     "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7199739\/manifest.json",
     "type": "Collection",
     "label": {
-        "en": "Collections for Pixie O'Harris"
+        "en": [
+            "Collections for Pixie O'Harris"
+        ]
     },
     "summary": {
-        "en": "Collection Summary for Pixie O'Harris"
+        "en": [
+            "Collection Summary for Pixie O'Harris"
+        ]
     },
     "requiredStatement": {
         "label": {
