--- a/data/qids/Q562540/manifest.json
+++ b/data/qids/Q562540/manifest.json
@@ -7,6 +7,9 @@
             "Collections for Augustus John"
         ]
     },
+    "behavior": [
+        "multi-part"
+    ],
     "summary": {
         "en": [
             "Collection Summary for Augustus John"
