--- a/data/qids/Q19360836/journal/manifest.json
+++ b/data/qids/Q19360836/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q19360836\/journal\/llgc-id1386666_llgc-id1415636.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1962-01-01"
