--- a/data/qids/Q20748839/journal/manifest.json
+++ b/data/qids/Q20748839/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20748839\/journal\/llgc-id1386666_llgc-id1421422.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1983-01-01"
