--- a/data/qids/Q21456839/journal/manifest.json
+++ b/data/qids/Q21456839/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21456839\/journal\/llgc-id1337678_llgc-id1340020.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1999-04-01"
