--- a/data/qids/Q21460680/newspaper/manifest.json
+++ b/data/qids/Q21460680/newspaper/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21460680\/newspaper\/4462290-modsarticle28-4462295-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1853-07-01"
