--- a/data/qids/Q2903257/newspaper/manifest.json
+++ b/data/qids/Q2903257/newspaper/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q2903257\/newspaper\/3098722-modsarticle48-3098728-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1895-04-11"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q2903257\/newspaper\/3579419-modsarticle95-3579427-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1914-11-21"
