--- a/data/qids/Q4758799/journal/manifest.json
+++ b/data/qids/Q4758799/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q4758799\/journal\/llgc-id1214989_llgc-id1217883.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1959-04-01"
