--- a/data/qids/Q7787897/newspaper/manifest.json
+++ b/data/qids/Q7787897/newspaper/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7787897\/newspaper\/3052863-modsarticle12-3052865-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1849-03-02"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7787897\/newspaper\/3100706-modsarticle13-3100708-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1862-12-31"
