--- a/data/qids/Q11208643/journal/manifest.json
+++ b/data/qids/Q11208643/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q11208643\/journal\/llgc-id1238716_llgc-id1240100.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1912-01-01"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q11208643\/journal\/llgc-id2092910_llgc-id2095890.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1887-07-01"
