--- a/data/qids/Q18200042/journal/manifest.json
+++ b/data/qids/Q18200042/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q18200042\/journal\/llgc-id2092910_llgc-id2098453.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1896-02-01"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q18200042\/journal\/llgc-id4718179_llgc-id4728984.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1920-01-01"
