--- a/data/qids/Q18601440/newspaper/manifest.json
+++ b/data/qids/Q18601440/newspaper/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q18601440\/newspaper\/3579599-modsarticle34-3579602-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1915-04-10"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q18601440\/newspaper\/4168792-modsarticle14-4168795-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1916-01-28"
