--- a/data/qids/Q1886336/manifest.json
+++ b/data/qids/Q1886336/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/journal\/manifest.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "journal articles"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/newspaper\/manifest.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "newspaper articles"
