--- a/data/qids/Q1886336/newspaper/manifest.json
+++ b/data/qids/Q1886336/newspaper/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/newspaper\/4313306-modsarticle162-4313313-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1897-03-16"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q1886336\/newspaper\/3794412-modsarticle68-3794419-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1891-12-18"
