--- a/data/qids/Q20631844/newspaper/manifest.json
+++ b/data/qids/Q20631844/newspaper/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20631844\/newspaper\/4355701-modsarticle7-4355708-3.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1867-09-06"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20631844\/newspaper\/3332783-modsarticle22-3332788-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1875-12-10"
