--- a/data/qids/Q20748839/newspaper/manifest.json
+++ b/data/qids/Q20748839/newspaper/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q20748839\/newspaper\/3612081-modsarticle10-3612083-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1916-07-29"
