--- a/data/qids/Q21457000/journal/manifest.json
+++ b/data/qids/Q21457000/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21457000\/journal\/llgc-id1326508_llgc-id1328828.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1995-01-01"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21457000\/journal\/llgc-id1191402_llgc-id1196881.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1990-01-01"
