--- a/data/qids/Q21457000/newspaper/manifest.json
+++ b/data/qids/Q21457000/newspaper/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21457000\/newspaper\/4347712-modsarticle1-4347713-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1852-09-17"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21457000\/newspaper\/4346089-modsarticle33-4346092-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1844-05-24"
