--- a/data/qids/Q21459585/journal/manifest.json
+++ b/data/qids/Q21459585/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21459585\/journal\/llgc-id1191402_llgc-id1196881.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1990-01-01"
