--- a/data/qids/Q21459585/newspaper/manifest.json
+++ b/data/qids/Q21459585/newspaper/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21459585\/newspaper\/3807128-modsarticle74-3807134-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1905-09-13"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21459585\/newspaper\/3468841-modsarticle47-3468844-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1900-05-03"
