--- a/data/qids/Q21467261/journal/manifest.json
+++ b/data/qids/Q21467261/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21467261\/journal\/llgc-id2919943_llgc-id2992946.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1888-04-01"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21467261\/journal\/llgc-id1326508_llgc-id1327777.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1986-01-01"
