--- a/data/qids/Q21467261/newspaper/manifest.json
+++ b/data/qids/Q21467261/newspaper/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21467261\/newspaper\/3506231-modsarticle70-3506234-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1878-03-16"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q21467261\/newspaper\/3810594-modsarticle45-3810601-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1889-04-12"
