--- a/data/qids/Q274339/newspaper/manifest.json
+++ b/data/qids/Q274339/newspaper/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q274339\/newspaper\/3830316-modsarticle20-3830319-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1908-03-21"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q274339\/newspaper\/3830316-modsarticle20-3830319-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1908-03-21"
