--- a/data/qids/Q449054/journal/manifest.json
+++ b/data/qids/Q449054/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q449054\/journal\/llgc-id1214989_llgc-id1217551.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1958-12-01"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q449054\/journal\/llgc-id1214989_llgc-id1218158.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1959-09-01"
