--- a/data/qids/Q4722948/journal/manifest.json
+++ b/data/qids/Q4722948/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q4722948\/journal\/llgc-id1272866_llgc-id1276399.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1994-01-01"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q4722948\/journal\/llgc-id1272866_llgc-id1276399.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1994-01-01"
