--- a/data/qids/Q5039201/newspaper/manifest.json
+++ b/data/qids/Q5039201/newspaper/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5039201\/newspaper\/3585775-modsarticle28-3585778-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1917-05-11"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q5039201\/newspaper\/3585775-modsarticle28-3585778-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1917-05-11"
