--- a/data/qids/Q6099370/journal/manifest.json
+++ b/data/qids/Q6099370/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6099370\/journal\/llgc-id2555083_llgc-id2583378.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1896-09-01"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6099370\/journal\/llgc-id1380216_llgc-id1385424.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "2000-01-01"
