--- a/data/qids/Q6099370/newspaper/manifest.json
+++ b/data/qids/Q6099370/newspaper/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6099370\/newspaper\/3670429-modsarticle59-3670432-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1889-03-02"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6099370\/newspaper\/3813056-modsarticle9-3813059-1.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1896-06-26"
