--- a/data/qids/Q6759645/journal/manifest.json
+++ b/data/qids/Q6759645/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/journal\/llgc-id1311205_llgc-id1311939.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1915-04-01"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q6759645\/journal\/llgc-id1311205_llgc-id1311939.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1915-04-01"
