--- a/data/qids/Q7787897/journal/manifest.json
+++ b/data/qids/Q7787897/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7787897\/journal\/llgc-id1191402_llgc-id1191529.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1933-01-01"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q7787897\/journal\/llgc-id1311205_llgc-id1313893.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1919-10-01"
